@@ -1,3 +1,7 @@
+[B][COLOR gold]v2.1.2[/COLOR][/B]
+- Added notification upon subtitles download (optional)
+- Debrid cache check dialog fixes
+
 [B][COLOR gold]v2.1.1[/COLOR][/B]
 - Label work
 
